--- a/landing.html
+++ b/landing.html
@@ -42,7 +42,7 @@
       <div class="tile small_tile glow_box fly_in">
         <h1>Nav</h1>
         <ul>
-          <li class="selectable nav_text"><a href="http://aveygo.github.io/">My Blog</a></li>
+          <li class="selectable nav_text"><a href="https://aveygo.github.io/">My Blog</a></li>
           <li class="selectable nav_text"><a href="https://github.com/aveygo">My Github</a></li>
           <li class="selectable nav_text"><a href="https://www.linkedin.com/in/gregory-taylor-au/">My Linkedin</a></li>
         </ul>
